[tool.poetry]
name = "pyremin"
version = "0.1.0"
description = "Digital theremin with raspberry pi"
authors = ["Lucas Gabriel Lima <lucasgabriellima@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
